--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -385,7 +385,7 @@
 	.\36 u, .\36 u\24 {
 		width: 50%;
 		clear: none;
-		margin-left: 0;
+		margin-left: 350px;
 	}
 
 	.\35 u, .\35 u\24 {
@@ -1981,6 +1981,12 @@
 		
 
 /* Feature */
+.logo{
+	margin-top: 30px;;
+	align-items: left;
+	margin-left: 10px;
+	
+}
 
 	.feature-grid {
 		position: relative;
@@ -2120,7 +2126,7 @@
 			.feature-grid .feature:nth-child(even) .content, .feature-grid .feature:nth-child(even) .image {
 				float: left;
 				margin-left: 5%;
-				text-align: left;
+				text-align: right;
 			}
 
 		@media screen and (max-width: 1280px) {
@@ -2552,7 +2558,8 @@
 		ul.actions {
 			cursor: default;
 			list-style: none;
-			padding-left: 0;
+			padding-left: 110px;
+			padding-right: 0px;
 		}
 
 			ul.actions li {
@@ -2683,6 +2690,7 @@
 		font-size: 1.25em;
 		margin-top: -1em;
 		line-height: 1.5em;
+		padding-left: 100px;
 	}
 
 	header h3 + p {
@@ -2700,11 +2708,12 @@
 	}
 
 	header.major {
-		margin: 0 0 6em 0;
+		margin: 0 0 3em 0;
 	}
 
 		header.major h2 {
 			font-size: 3em;
+			padding-left: 100px;
 		}
 
 		header.major h2, header.major h3, header.major h4, header.major h5, header.major h6 {
@@ -3203,7 +3212,7 @@
 	}
 
 	#banner {
-		padding: 16em 0 13em 0;
+		padding: 11em 0 13em 0;
 		background-attachment: fixed;
 		
 		background-position: center top;
@@ -3217,7 +3226,7 @@
 		}
 
 		#banner h2 {
-			color: #3a3737;
+			color: #1A73E8;
 			display: inline-block;
 			font-size: 3.5em;
 			line-height: 1.35;
@@ -3227,7 +3236,7 @@
 		#banner p {
 			color: #aaa;
 			font-size: 1.5em;
-			margin-bottom: 1.75em;
+			margin-bottom: .75em;
 			text-transform: uppercase;
 		}
 
