--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ body {
   margin-left: -300%;
 }
 
-
 img {
   max-width: 100%;
 }
@@ -174,14 +173,15 @@ header {
 /* LINKS */
 .link {
   padding: 50px;
+  text-align: center;
 }
 
-.sub-links ul {
+.sub-links ul , .policies{
   list-style: none;
   padding: 0;
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(4, 1fr);
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .sub-links a {
@@ -202,11 +202,15 @@ header {
   color: var(--dark);
 }
 
+a:visited {
+  color: var(--dark);
+}
+
 /* FOOTER */
 footer {
   padding: 20px;
   text-align: center;
-  color: var(--dark);
+  color: var(--dark) !important;
   margin: 10px;
 }
 
