--- a/style.css
+++ b/style.css
@@ -218,59 +218,135 @@ body {
   margin: 0;
   padding: 0;
   background-color: #ffffff;
-  color: #131212;
+  color: #1A73E8;
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
   line-height: 1.4;
 }
+/*slider start*/
 
-.slider {
-  margin-top: 111px;
-  position: relative;
+
+
+
+.slider{
   width: 100%;
+  height: 500px;
+  border-radius: 10px;
   overflow: hidden;
+  margin-top: 50px;
 }
-.images {
+
+.slides{
+  width: 500%;
+  height: 500px;
   display: flex;
-  width: 100%;
 }
-.images img {
-  height: 400px;
-  width: 100%;
-  transition: all 0.15s ease;
-}
-.images input {
+
+.slides input{
   display: none;
 }
-.dots {
+
+.slide{
+  width: 20%;
+  transition: 2s;
+}
+
+.slide img{
+  width: 100%;
+  height: 500px;
+}
+
+/*css for manual slide navigation*/
+
+.navigation-manual{
+  position: absolute;
+  width: 800px;
+  padding-left: 600px;
+  margin-top: -40px;
   display: flex;
   justify-content: center;
-  margin: 5px;
 }
-.dots label {
-  height: 10px;
-  width: 10px;
-  border-radius: 50%;
-  border: solid rgb(105, 163, 250) 3px;
+
+.manual-btn{
+  border: 2px solid #e4eaeb;
+  padding: 5px;
+  
+  border-radius: 10px;
   cursor: pointer;
-  transition: all 0.15s ease;
-  margin: 5px;
+  transition: 1s;
 }
-.dots label:hover {
-  background: rgb(160, 154, 154);
+
+.manual-btn:not(:last-child){
+  margin-right: 40px;
 }
-#img1:checked ~ .m1 {
+
+.manual-btn:hover{
+  background: #e4eaeb;
+}
+
+#radio1:checked ~ .first{
   margin-left: 0;
 }
-#img2:checked ~ .m2 {
-  margin-left: -100%;
+
+#radio2:checked ~ .first{
+  margin-left: -20%;
 }
-#img3:checked ~ .m3 {
-  margin-left: -200%;
+
+#radio3:checked ~ .first{
+  margin-left: -40%;
 }
-#img4:checked ~ .m4 {
-  margin-left: -300%;
+
+#radio4:checked ~ .first{
+  margin-left: -60%;
 }
+
+/*css for automatic navigation*/
+
+.navigation-auto{
+  position: absolute;
+  display: flex;
+  width: 800px;
+  padding-left: 600px;
+  justify-content: center;
+  margin-top: 460px;
+}
+
+.navigation-auto div{
+  border: 2px solid #e4eaeb;
+  padding: 5px;
+  border-radius: 10px;
+  transition: 1s;
+}
+
+.navigation-auto div:not(:last-child){
+  margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1{
+  background: #e4eaeb;
+}
+
+#radio2:checked ~ .navigation-auto .auto-btn2{
+  background: #e4eaeb;
+}
+
+#radio3:checked ~ .navigation-auto .auto-btn3{
+  background: #e4eaeb;
+}
+
+#radio4:checked ~ .navigation-auto .auto-btn4{
+  background: #e4eaeb;
+}
+      
+
+
+
+
+
+
+
+
+/*slider end*/
 
 img {
   max-width: 100%;
@@ -294,7 +370,7 @@ header {
   grid-gap: 5px;
   grid-template-columns: 1fr 4fr 1fr;
   grid-template-areas: "nt mn mn sb . . . ";
-  background-color: #4285f4;
+  background-color: #aaafb4;
   width: 100%;
   margin-bottom: 0px;
 }
@@ -331,7 +407,7 @@ header {
 }
 
 .main-nav a:hover {
-  color: var(--dark);
+  color: var(--light);
 }
 
 .sub-nav {
@@ -346,7 +422,7 @@ header {
 }
 
 .sub-nav a:hover {
-  color: var(--dark);
+  color: var(--light);
 }
 /* CARDS */
 
@@ -372,6 +448,7 @@ header {
   -ms-transform: scale(1.4);
   -webkit-transform: scale(1.4);
   transform: scale(1.4);
+  color: var(--light);
 }
 
 .box img {
@@ -382,6 +459,7 @@ header {
 .link {
   padding: 50px;
   text-align: center;
+  color: var(--light);
 }
 
 .sub-links ul,
@@ -394,12 +472,12 @@ header {
 }
 
 .sub-links a {
-  color: var(--dark);
+  color: var(--light);
   text-decoration: none;
 }
 
 .sub-links a:hover {
-  color: var(--dark);
+  color: var(--light);
   text-decoration: underline;
 }
 
@@ -412,15 +490,16 @@ header {
 }
 
 a:visited {
-  color: var(--dark);
+  color: var(--light);
 }
 
 /* FOOTER */
 footer {
-  padding: 20px;
+  padding: 15px;
   text-align: center;
-  color: var(--dark) !important;
-  margin: 10px;
+  color: var(--light) !important;
+  margin: 0px;
+  
 }
 
 /* MEDIA QUERIES */
@@ -531,4 +610,3 @@ footer {
     font-size: 15px;
   }
 }
-
