--- a/style.css
+++ b/style.css
@@ -611,97 +611,165 @@ footer {
   }
 }
 
-/* sapna card */
 
-.snip1515 {
-  font-family: 'Open Sans', Arial, sans-serif;
-  position: relative;
-  margin: 10px;
-  width: 320px;
-  color: #000000;
-  text-align: center;
-  line-height: 1.4em;
-  font-size: 14px;
-  box-shadow: none !important;
-}
-
-.snip1515 * {
+/*Amritha*/
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
+* {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.snip1515 .profile-image {
-  display: inline-block;
-  width: 80%;
-  z-index: 1;
+body {
+  font-family: "Roboto", sans-serif;
+}
+a {
+  text-decoration: none;
+}
+.product-card1 {
+  width: 290px;
   position: relative;
-  padding: 10px;
-  border: 2px solid #1A73E8;;
+  box-shadow: 0 2px 7px #dfdfdf;
+
+  background: #fafafa;
 }
 
-.snip1515 .profile-image img {
+.product-tumb1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background: #f0f0f0;
+}
+
+.product-tumb img {
   max-width: 100%;
-  vertical-align: top;
+  max-height: 100%;
 }
 
-.snip1515 figcaption {
+
+.container {
+  background-color: rgb(192, 192, 192);
   width: 100%;
-  background-color: #F2F2F2;
-  color: #555;
-  padding: 125px 25px 25px;
-  margin-top: -100px;
-  display: inline-block;
+      border-radius: 15px;
 }
 
-.snip1515 h3,
-.snip1515 h4,
-.snip1515 p {
-  margin: 0 0 5px;
-}
-
-.snip1515 h3 {
-  font-weight: 600;
-  font-size: 1.3em;
-  font-family: 'Playfair Display', Arial, sans-serif;
-}
-
-.snip1515 h4 {
-  color: #8c8c8c;
-  font-weight: 400;
-  letter-spacing: 2px;
-}
-
-.snip1515 p {
-  font-size: 0.9em;
-  letter-spacing: 1px;
-  opacity: 0.9;
-}
-
-.snip1515 .icons {
-  text-align: center;
-  width: 100%;
-}
-
-.snip1515 i {
-  padding: 10px 2px;
-  display: inline-block;
-  font-size: 18px;
-  font-weight: normal;
-  color: #1A73E8;
-  opacity: 0.75;
-}
-
-#myProgress {
-  margin: 10px;
-  width: 100%;
-  background-color: #ddd;
-}
-
-#myBar {
-  width: 75%;
-  height: 30px;
+.skill {
   background-color: #1A73E8;
+  color: white;
+  padding: 1%;
+  text-align: right;
+  font-size: 12px;
+      border-radius: 15px;
 }
+
+.html {
+  width: 80%;
+}
+
+.product-details1 {
+  padding: 30px;
+}
+
+.product-catagory1 {
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: rgb(35, 39, 38);
+  margin-bottom: 18px;
+}
+.organiser {
+  display: block;
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: rgb(38, 44, 43);
+  margin-bottom: 18px;
+}
+
+.product-details h4 a {
+  font-weight: 500;
+  display: block;
+  margin-bottom: 18px;
+  text-transform: uppercase;
+  color: #363636;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.product-details h4 a:hover {
+  color: #4285f4;
+}
+
+.product-details p {
+  font-size: 15px;
+  line-height: 22px;
+  margin-bottom: 18px;
+  color: #999;
+}
+
+.product-bottom-details {
+  overflow: hidden;
+  border-top: 1px solid #eee;
+  padding-top: 20px;
+}
+
+.product-bottom-details div {
+  float: left;
+  width: 50%;
+}
+
+.product-price {
+  font-size: 18px;
+  color: #4285f4;
+  font-weight: 600;
+}
+
+.product-price small {
+  font-size: 80%;
+  font-weight: 400;
+  text-decoration: line-through;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.product-links {
+  text-align: right;
+}
+
+.product-links a {
+  display: inline-block;
+  margin-left: 5px;
+  color: #e1e1e1;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+.product-links a:hover {
+  color: #4285f4;
+}
+
+.progress-bar {
+  border-radius: 60px;
+  overflow: hidden;
+  width: 100%;
+}
+.progress-bar span {
+  display: block;
+}
+.bar {
+  background: rgba(0, 0, 0, 0.075);
+}
+.progress {
+  background: #4285f4;
+  color: #fff;
+  padding: 5px;
+}
+
+  
+/*Amritha css end*/
 /* SHAMEER  */
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
 * {
@@ -718,7 +786,7 @@ a {
   text-decoration: none;
 }
 .product-card {
-  width: 330px;
+  width: 290px;
   position: relative;
   box-shadow: 0 2px 7px #dfdfdf;
 
@@ -744,7 +812,7 @@ a {
 
 .product-catagory {
   display: block;
-  font-size: 12px;
+  font-size: 20px;
   font-weight: 700;
   text-transform: uppercase;
   color: rgb(35, 39, 38);
